[package]
name = "ds"
description = "A library for controlling FIRST Robotics Competition robots"
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/Redrield/ds-rs"
documentation = "https://docs.rs/ds"
readme = "README.md"
version = "1.3.0"
keywords = ["frc", "first", "robotics"]
categories = ["network-programming"]
authors = ["Kaitlyn Kenwell <redrield@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "2.6.0"
byteorder = "1.5.0"
failure = "0.1.8"
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
smallvec = "1.13.2"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["net", "codec"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
bytes = "1.6.1"
futures-channel = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink", "async-await"] }
futures = "0.3.30"
rand = "0.8.5"
