[package]
name = "libDS"
version = "0.1.1"
authors = ["Redrield <redrield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ds = { path = "../" }
libc = "0.2.155"
lazy_static = "1.5.0"
